flapivor/tests/tests-m3/hopix/typechecker/bad/if2.hopix
val test : int =
  if true then 0 else if false then 1 else 'a'